# demo-app-django

./: .env.example  .gitignore  .gitlab-ci.yml  Dockerfile  README.md  entrypoint.sh  manage.py  pyproject.toml
.github/workflows/: python_deploy.yml
.pd/: _build_deploy.sh
pd_django_demo/: asgi.py  settings.py  sqs.py  urls.py  wsgi.py
tasks/: helpers.py  models.py  sqs.py  views.py
tasks/management/commands/: consume_sqs.py
tasks/migrations/: 0001_initial.py
tasks/templates/tasks/: tasks.html
