[tool.poetry]
name = "Python Deploy Django demo"
version = "1.0.0"
description = "A Django app ready to be deployed with pythondeploy.co"
authors = ["Federico Jaramillo Martínez <federicojaramillom@gmail.com>"]
license = "Unlicense"

[tool.poetry.dependencies]
python = "^3.8"
Django = ">=4.0"
dj-database-url = ">=0.5.0"
psycopg2-binary = ">=2.9.2"
django-storages = {version = ">=1.12.3", extras = ["boto3"]}
pd-aws-lambda = ">=1.0.0"
Collectfast = ">=2.2.0"
awslambdaric = ">=2.0.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
black = "*"
isort = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
